--- a/10_11/10_11/10_11.vcxproj
+++ b/10_11/10_11/10_11.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{A1E226FC-94B5-4468-9F26-9577AA810DEA}</ProjectGuid>
-    <RootNamespace>My107</RootNamespace>
+    <ProjectGuid>{192FDA3B-F9B7-4FDD-A780-7026D9BF7146}</ProjectGuid>
+    <RootNamespace>My1011</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -74,7 +74,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <SDLCheck>false</SDLCheck>
+      <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
@@ -123,11 +123,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="SeqList.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="SeqList.c" />
-    <ClCompile Include="Test.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
